--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+  socket: <%= RUBY_PLATFORM.include?('linux') ? "/var/run/mysqld/mysqld.sock" : "/tmp/mysql.sock" %>
 
 development:
   <<: *default
